--- a/FormCreator/package.json
+++ b/FormCreator/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "npx webpack-dev-server --content-base src",
     "build": "npx webpack"
   },
@@ -22,5 +22,9 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/jest": "^26.0.0",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0"
+  }
 }
